fixing contrast issues

--- a/styles/base.css
+++ b/styles/base.css
@@ -61,7 +61,7 @@ nav a
     padding-bottom: 20px;
     font-size:180%;
     text-decoration: none;
-	color: #fff;
+	color: #363535;
 
 }
 
