--- a/styles/large.css
+++ b/styles/large.css
@@ -48,7 +48,7 @@
         padding-top: 20px;
         padding-bottom: 20px;
         font-size:180%;
-        color: #fff;
+        color: #363535;
         padding-left: 5%;
         padding-right: 5%;
     }
